--- a/csp-apps/anonymization/anon-server/src/main/resources/templates/pages/mappings.html
+++ b/csp-apps/anonymization/anon-server/src/main/resources/templates/pages/mappings.html
@@ -29,7 +29,7 @@
         <div class="col-md-12 col-sm-12">
             <div class="row" data-duplicate="contact" data-duplicate-min="2" data-duplicate-max="10">
                 <form th:id="mappingForm" id="mappingForm" th:action="@{/mapping/save}" th:object="${mapping}" enctype="multipart/form-data" method="post" data-toggle="validator">
-                    <div class="col-md-3 col-xs-12">
+                    <div class="col-md-2 col-xs-12">
                         <div class="form-group">
                             <label>CSP id:</label>
                             <input class="form-control" th:field="*{id}" name="id" type="hidden"/>
@@ -37,7 +37,7 @@
                             <span th:if="${#fields.hasErrors('cspId')}" th:errors="*{cspId}">cspId Error</span>
                         </div>
                     </div>
-                    <div class="col-md-3 col-xs-12">
+                    <div class="col-md-2 col-xs-12">
                         <label>Data Type:</label>
                         <div class="input-group" style="width: 100%;">
                             <select id="selectDataTypeId" th:id="selectDataTypeId" th:field="*{dataType}" class="form-control" name="selectDataType" th:name="selectDataType" required="required">
@@ -45,6 +45,19 @@
                                 <option th:each="dataType : ${integrationDataTypes}"
                                         th:value="${dataType.name()}"
                                         th:text="${dataType}">
+                                </option>
+                            </select>
+                            <span th:if="${#fields.hasErrors('dataType')}" th:errors="*{dataType}">dataType Error</span>
+                        </div>
+                    </div>
+                    <div class="col-md-2 col-xs-12">
+                        <label>Application id:</label>
+                        <div class="input-group" style="width: 100%;">
+                            <select id="applicationId" th:id="applicationId" th:field="*{applicationId}" class="form-control" name="selectApplicationId" th:name="selectApplicationId" required="required">
+                                <option th:value="${null}" th:text="${'select id'}" th:selected="selected"></option>
+                                <option th:each="applicationId : ${T(com.intrasoft.csp.anon.commons.model.ApplicationId).values()}"
+                                        th:value="${applicationId}"
+                                        th:text="${applicationId.getApplicationId()}">
                                 </option>
                             </select>
                             <span th:if="${#fields.hasErrors('dataType')}" th:errors="*{dataType}">dataType Error</span>
