--- a/csp-apps/anonymization/anon-server/src/main/resources/templates/pages/mappings.html
+++ b/csp-apps/anonymization/anon-server/src/main/resources/templates/pages/mappings.html
@@ -56,8 +56,8 @@
                             <select id="applicationId" th:id="applicationId" th:field="*{applicationId}" class="form-control" name="selectApplicationId" th:name="selectApplicationId" required="required">
                                 <option th:value="${null}" th:text="${'select id'}" th:selected="selected"></option>
                                 <option th:each="applicationId : ${T(com.intrasoft.csp.anon.commons.model.ApplicationId).values()}"
-                                        th:value="${applicationId}"
-                                        th:text="${applicationId.getApplicationId()}">
+                                        th:value="${applicationId.name()}"
+                                        th:text="${applicationId}">
                                 </option>
                             </select>
                             <span th:if="${#fields.hasErrors('dataType')}" th:errors="*{dataType}">dataType Error</span>
@@ -92,6 +92,7 @@
                                     <th><i class="fa  fa-file-code-o"></i></th>
                                     <th data-sortable="true">CSP Id</th>
                                     <th data-sortable="true">Data Type</th>
+                                    <th data-sortable="true">Application id</th>
                                     <th data-sortable="true">Ruleset</th>
                                     <th>Actions</th>
                                 </tr>
@@ -100,6 +101,7 @@
                                     <td th:text="${iterStat.count}"></td>
                                     <td th:text="${mapping.cspId}"></td>
                                     <td th:text="${mapping.dataType}"></td>
+                                    <td th:text="${mapping.applicationId}"></td>
                                     <td th:text="${mapping.ruleSetDTO.filename}"></td>
                                     <td><a th:href="'#'+${mapping.id}"  data-toggle="modal" ><i class="fa fa-trash" aria-hidden="true"></i></a>
                                         <a th:href="'/mappings/'+${mapping.id}"><i class="fa fa-edit" aria-hidden="true"></i></a></td>
