--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/templates/fragments.html
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/templates/fragments.html
@@ -59,7 +59,7 @@
             <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="/">
-            <img th:src="@{/assets/img/logo.png}" style="float: left; margin-top: -15px;"/>
+            <img th:src="@{/assets/img/logo.png}" th:title="${gitVersion}" style="float: left; margin-top: -15px;"/>
         </a>
         <span class="navbar-brand" style="">CSP Installation</span>
 
@@ -82,7 +82,6 @@
             <i class="fa fa-comment-o "></i> Contact Us</a>
         </li>
     </ul>
-
 </div>
 
 
