Fix for naming in GUI and RestApi controller OWASP issues

--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/templates/pages/install-register.html
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/templates/pages/install-register.html
@@ -87,19 +87,19 @@
                 <div class="row">
                     <div class="col-md-4 col-xs-12">
                         <div class="form-group">
-                            <label for="csp_id">CSP ID:</label>
+                            <label for="csp_id">CSP UUID:</label>
                             <input class="form-control uuid" id="csp_id" maxlength="36" name="csp_id" type="text" th:value="${cspId}" readonly="readonly"></input>
                         </div>
                     </div>
                     <div class="col-md-4 col-xs-12">
                         <div class="form-group">
-                            <label for="csp_name">Name:</label>
+                            <label for="csp_name">CSP-ID:</label>
                             <input class="form-control" id="csp_name" name="csp_name" type="text"></input>
                         </div>
                     </div>
                     <div class="col-md-4 col-xs-12">
                         <div class="form-group">
-                            <label for="csp_domain_name">Domain Name:</label>
+                            <label for="csp_domain_name">Domain Name: (without CSP-ID)</label>
                             <input class="form-control" id="csp_domain_name" name="csp_domain_name" type="text"></input>
                         </div>
                     </div>
