--- a/csp-apps/vcbridge/vcb-admin/src/main/resources/templates/createMeeting.html
+++ b/csp-apps/vcbridge/vcb-admin/src/main/resources/templates/createMeeting.html
@@ -187,7 +187,7 @@
 
                             <div class="row">
                                 <div class="col-md-12">
-                                    <table class="table">
+                                    <table class="table" id="participant_tbl">
 
                                 <thead>
                                 <tr>
@@ -212,6 +212,8 @@
 
                                 </tbody>
                             </table>
+                                <label for="participant_tbl">Note: the first participant added will become the Meeting Organiser</label>
+
                                 </div>
                             </div>
                             <div class="row">
